tests/ui/once_unsync_reads_unsupported.rs
use cached::macros::once;

#[once(unsync_reads = true)]
fn f() -> i32 {
    42
}

fn main() {}
